Implement assignment setDatasets
